--- a/src/app-gti/css/footer.css
+++ b/src/app-gti/css/footer.css
@@ -1,7 +1,7 @@
 footer {
     background-color: #101827;
     color: #ffffff;
-    padding: 20px 0;
+    padding: 15px 0;
     font-family: var(--fuente-principal);
 }
 
@@ -9,19 +9,17 @@ footer {
     display: flex;
     justify-content: space-evenly;
     margin: auto;
-    padding: 0 20px;
     flex-wrap: wrap;
 }
 .columna-footer-contenedor{
     display: flex;
     justify-content: center;
     padding: 0 20px;
-
 }
 
 .columna-footer {
     min-width: 200px;
-    margin: 20px;
+    margin: 10px;
 }
 
 .columna-footer h4 {
@@ -52,7 +50,7 @@ footer {
 
 .derechos {
     text-align: center;
-    padding: 20px 0 0;
+    padding-top: 20px;
 }
 
 @media (max-width: 520px) {
@@ -67,7 +65,7 @@ footer {
     }
     .derechos{
         text-align: left;
-        padding: 0 40px;
+        padding: 0 10px;
     }
 
     h4{
