--- a/src/app-gti/css/catalogo.css
+++ b/src/app-gti/css/catalogo.css
@@ -1,7 +1,9 @@
+/* ESTILOS CATÁLOGO */
+
 .catalogo {
     max-width: 1100px;
     margin: 0 auto;
-    padding: 1.5em 2em;
+    padding: 3em 2em;
     display: flex;
     flex-direction: column;
     gap: 3em;
@@ -38,7 +40,7 @@
 }
 
 .logo-proa {
-    width: 700px;
+    width: 600px;
     height: auto;
 }
 
@@ -55,7 +57,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 1em;
+    gap: 1.5em;
     margin-top: 1em;
     align-self: center;
     justify-content: center;
@@ -65,6 +67,14 @@
     min-width: 220px;
     width: 100%;
     max-width: 260px;
+}
+
+#btnVisualizarProd {
+    padding: .5em;
+}
+
+#btnProbarDemo {
+    padding: .5em;
 }
 
 /* ---------- FORMULARIO DE SUGERENCIA ---------- */
@@ -80,6 +90,11 @@
 
 .sugerencia h3 {
     margin-bottom: 0.5em;
+}
+
+label {
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
 
 .formulario-sugerencia {
@@ -110,10 +125,11 @@
     justify-content: flex-end;
 }
 
+/* ---------- RESPONSIVE (PANTALLAS MÁS PEQUEÑAS) ---------- */
 @media (max-height: 800px) {
     .catalogo {
         gap: 2em;
-        padding: 1em 1.5em;
+        padding: 3em 1.5em;
     }
 
     .modulo, .sugerencia {
@@ -134,7 +150,7 @@
     .btnPROA,
     .btnPROA-secundario,
     .btn {
-        padding: 0.5em 1em;
+        padding: 0.8em 1em;
         font-size: 0.95em;
     }
 }
@@ -170,17 +186,17 @@
     .modulo-botones {
         display: flex;
         flex-direction: column;
-        align-items: center;     /* centramos los botones */
+        align-items: center;
         gap: 1em;
         margin-top: 2em;
         width: 100%;
-        padding: 0 1em;          /* margen horizontal interno */
+        padding: 0 1em;
 
     }
 
     .modulo-botones button {
-        max-width: 100%;         /* quitar el tope anterior de 260px */
-        padding: 1em 2em;        /* asegúrate de que tengan buen relleno */
+        max-width: 100%;
+        padding: 1em 2em;
         font-size: 1rem;
     }
 
