--- a/src/app-gti/css/registro.css
+++ b/src/app-gti/css/registro.css
@@ -1,3 +1,4 @@
+/* region --- CSS REGISTRO--- */
 .registro {
     padding: 4em 3em;
 }
@@ -145,4 +146,17 @@
         margin-left: 0;
     }
 }
+/* endregion */
+
+/* region --- MENSAJES DE ERROR FORMULARIO REGISTRO (MÁS PEQUEÑO) --- */
+.error-texto {
+    font-size: 0.75em;
+}
+
+@media (max-width: 768px) {
+    .error-texto {
+        font-size: 0.6em;
+    }
+}
+/* endregion */
 
