--- a/src/app-gti/css/estilos.css
+++ b/src/app-gti/css/estilos.css
@@ -26,6 +26,16 @@ a { color: inherit; }
 html {
     scroll-behavior: smooth;
 }
+
+html, body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
 /* endregion */
 
 /* region --- FUENTES --- */
