--- a/src/app-proa/css/submenu-asignatura.css
+++ b/src/app-proa/css/submenu-asignatura.css
@@ -39,9 +39,10 @@ html, body {
     display: flex;
     flex-direction: column;
     background-color: white;
-    min-width: 350px;
+    width: 340px;
     height: 100%;
     border-radius: 5px;
+    flex-shrink: 0;
 }
 
 /* TÍTULO DEL SUBMENÚ */
@@ -58,14 +59,18 @@ html, body {
 .menu .submenu-item,
 #submenu a {
     display: flex;
-    align-items: center;
+    align-items: center;   /* centra verticalmente el contenido */
+    justify-content: center; /* centra horizontalmente */
+    text-align: center;
     gap: 0.75em;
     text-decoration: none;
     color: var(--color-resalteOscuro);
     transition: background-color 0.2s, color 0.2s;
     font-weight: 500;
+    font-family: var(--fuente-principal);
+    font-size: 1.15em;
     border-bottom: 1px solid var(--color-bordes);
-    padding: 1.3em 1.3em;
+    padding: 1.1em;
 }
 
 .menu .submenu-item:hover,
