--- a/src/app-gti/css/footer.css
+++ b/src/app-gti/css/footer.css
@@ -13,6 +13,12 @@ footer {
 }
 .columna-footer-contenedor{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 20px;
+}
+.columna-footer-info{
+    display: flex;
     justify-content: center;
     padding: 0 20px;
 }
@@ -55,16 +61,19 @@ footer {
 
 @media (max-width: 520px) {
     .contenido-footer {
-        justify-content: flex-start;
+        justify-content: center;
     }
-    .columna-footer-contenedor{
-        justify-content: flex-start;
+    .columna-footer-info{
+        justify-content: center;
         flex-wrap: wrap;
-
         padding: 0;
     }
+    .columna-footer{
+       text-align: center;
+    }
+
     .derechos{
-        text-align: left;
+        text-align: center;
         padding: 0 10px;
     }
 
