--- a/src/app-proa/profesor/css/crear-examen-nuevo.css
+++ b/src/app-proa/profesor/css/crear-examen-nuevo.css
@@ -31,7 +31,7 @@
 
 .contenedor-valor-peso{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 1em;
 }
 
@@ -48,7 +48,7 @@
 
 .contenedor-fecha-hora{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 1em;
 }
 
@@ -90,6 +90,47 @@
     width: 9em;
     height: 2.5em;
     padding: 0;
+}
+
+@media(max-width: 1100px){
+    .contenedor-valor-peso{
+        flex-direction: column;
+    }
+
+    .contenedor-fecha-hora{
+        flex-direction: column;
+    }
+}
+
+@media (max-width:700px ){
+
+    label{
+        font-size: 1em;
+    }
+
+
+
+    .input-base{
+        font-size: 0.75em;
+    }
+
+    .pregunta-contenedor{
+        padding: 0.75em;
+    }
+
+    .respuesta-opcion{
+        gap: 0.33em;
+    }
+
+    .radio-grupo{
+        gap: 0.33em;
+        min-width: unset;
+    }
+    .input-respuesta{
+        width: 100%;
+    }
+
+
 }
 
 
