--- a/src/app-proa/profesor/css/crear-examen-nuevo.css
+++ b/src/app-proa/profesor/css/crear-examen-nuevo.css
@@ -3,6 +3,11 @@
     flex-direction: column;
 }
 
+.btn-atras {
+    margin-left: 2em;
+    align-self: flex-start;
+}
+
 .datos{
     display: flex;
     flex-direction: column;
