--- a/src/app-gti/css/footer.css
+++ b/src/app-gti/css/footer.css
@@ -45,7 +45,7 @@ footer {
     text-decoration: underline;
 }
 
-.parrafo-secundario{
+.elementos-footer{
     font-size: 1.15em;
     font-weight: 300;
 }
@@ -70,7 +70,7 @@ footer {
         font-weight: bold;
     }
 
-    .parrafo-secundario{
+    .elementos-footer{
         font-size: 0.875em;
     }
 
